Contoller layer tests for creating gallery posts
